--- a/Basic_HTML_1.html
+++ b/Basic_HTML_1.html
@@ -3,4 +3,5 @@
 <title>Notepad++ Assignment</title>
 <p>"Hello, World!"</p>
 <h1>Assignment.html!</h1>
+<script src="Hello_World.js"></script>
 </html>
