--- a/Basic_JavaScript_1.html
+++ b/Basic_JavaScript_1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-	<button onclick="My_First_Function"> Click Me! </button>
+	<button onclick="My_First_Function()"> Click Me! </button>
 	<p id="Irish">HUBUBUBUBBUBUBUBUBA</p>
 <script>
 	function My_First_Function() {
