--- a/Basic_HTML_1.html
+++ b/Basic_HTML_1.html
@@ -6,7 +6,7 @@
 <p><font face="Roboto" size="7" color="purple">Yo boyz this is Jroc</font></p>
 <p><font face="Impact" size="1" color="#701243">Trev, Cory, smokes lets go</font></p>
 <p><font size="7"><b>you<b/>, <i>get</i> <u>OUTTA HERE</u>.</font></p>
-<p>Added another paragraph</p>
+<p>Added another paragraph.</p>
 <img alt="Rincon beach, film location in The Endless Summer" sc="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.lireuDPUg3bsjJ4qQGFRgAHaDs%26pid%3DApi&f=1">
 <script src="Hello_World.js"></script>
 </html>
